# v1math

./: CMakeLists.txt  LICENSE  README.md
include/: library.h  scalar.h
include/v1math/: matrix.h  quaternion.h  scalar.h  transform.h  vector.h  vector_array.h
src/: CMakeLists.txt
src/scalar/: CMakeLists.txt  float_ops.c  int_ops.c
src/vector/: CMakeLists.txt  advanced_vector_ops.c  vec2f.c  vector_constructors.c  vector_float_basic_ops.c  vector_integer_basic_ops.c
src/vector_array/: CMakeLists.txt  advanced_vector_ops.c
